# RoboRTS-Base

roborts_base/: CMakeLists.txt  package.xml
roborts_base/include/: chassis.h  config.h  gimbal.h  module.h  referee_system.h  ros_dep.h
roborts_base/include/utils/: factory.h
roborts_base/roborts_sdk/: CMakeLists.txt
roborts_base/roborts_sdk/include/: protocol_content.h
roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp  roborts_base_node.cpp
roborts_msgs/: CMakeLists.txt  package.xml
roborts_msgs/msg/auto_aim/: AimingPoint.msg  Latency.msg
roborts_msgs/msg/referee_system/: LurkStatus.msg
