<?xml version="1.0"?>
<package format="3">
    <name>roborts_msgs</name>
    <version>2.0.0</version>
    <description>The roborts_msgs package provides all the messages for RoboMaster AI Robot driver.</description>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL-3.0</license>
    
    <url type="repository">https://github.com/RoboMaster/RoboRTS-Base</url>
    <url type="bugtracker">https://github.com/RoboMaster/RoboRTS-Base/issues</url>

    <author>RoboMaster</author>

    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <!-- <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend> -->
    <!-- <build_depend>rosidl_default_generators</build_depend> -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <!-- Build and run dependencies -->
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    
    <!-- Export this package as a ROS 2 package -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
